2011-03-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1752/doc
	* cpu_supplement/.cvsignore, cpu_supplement/Makefile.am,
	cpu_supplement/cpu_supplement.texi: Remove TI C4x CPU Supplement
	chapter.
	* cpu_supplement/tic4x.t: Removed.

2011-03-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ada_user/Makefile.am: Add ObjectId pdf files.

2011-03-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Rename RTEMS_API into _RTEMS_API.

2011-03-04	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1744/doc
	* user/clock.t: rtems_clock_time_value type uses changed to struct
	timeval.

2011-02-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* setup.def, shell/preface.texi: Bump to 4.10.99.0

2011-02-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Document changes to Scheduler configuration.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2011-01-10	Danila Bespalov <danila DOT bespalov AT gmail DOT com>

	* posix_users/posix_users.texi, posix_users/signal.t: Review and
	improve as part of Google Code-In 2010.

2011-01-02	Danila Bespalov <danila DOT bespalov AT gmail DOT com>

	* started/buildc.t, started/buildrt.t, started/nt.t, started/require.t,
	started/sample.t: Review and improve.

2010-12-16	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* develenv/direct.t: Remove Getting Started with GNAT/RTEMS.
	* started_ada/.cvsignore, started_ada/Makefile.am,
	started_ada/buildada.t, started_ada/gdb.t, started_ada/intro.t,
	started_ada/require.t, started_ada/sample.t, started_ada/stamp-vti,
	started_ada/started_ada.texi, started_ada/tversions.texi,
	started_ada/version.texi: Removed.

2010-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, common/cpright.texi, common/rtems.texi.in,
	cpu_supplement/.cvsignore, started/Makefile.am, started/binaries.t,
	started/buildc.t, started/buildrt.t, started/intro.t,
	started/nextstep.t, started/nt.t, started/require.t,